--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /design_images
 /target/classes/
 /PikachuAirlinesDesign.zip
+/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
