--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /target/classes/
 /PikachuAirlinesDesign.zip
 /target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+PikachuAirlinesDesign.zip
