--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,5 @@
 /target/classes/
 /PikachuAirlinesDesign.zip
 /target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
-PikachuAirlinesDesign.zip
+/PikachuAirlinesDesign.zip
+src/main/java/ai/ApiKeys.java
