--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
 /PikachuAirlinesDesign.zip
 /src/main/java/ai/ApiKeys.java
+src/main/java/ai/ApiKeys.java
