feat: Enhance booking and user management functionality with caching and improved data handling

--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,4 @@
 /PikachuAirlinesDesign.zip
 \src\main\java\ai\ApiKeys.java
 src/main/java/ai/ApiKeys.java
-src/main/java/ai/ApiKeys.java
+\src\main\java\ai\ApiKeys.java
