sign up page fixed

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /src/main/java/ai/ApiKeys.java
 src/main/java/ai/ApiKeys.java
 src/main/java/ai/ApiKeys.java
+target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
